<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/threedcinema_bg"
    android:orientation="vertical" >
<ScrollView 
    android:id="@+id/ScrollView" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent" 
    >
<RelativeLayout 
    android:id="@+id/linearlayout_row"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:layout_centerHorizontal="true"
    >

    <ImageView
        android:id="@+id/videopager_thumbnail"
        android:layout_width="200dp"
        android:layout_height="200dp"
    	android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4.0dip" 
        android:scaleType="centerCrop"
         />
		
   
    <TextView
        android:id="@+id/videopager_title"
        android:layout_below="@id/videopager_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" />
     <TextView
        android:id="@+id/videopager_zhuyan"
        android:layout_below="@id/videopager_title"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        android:text="@string/zhuyan"
        />
      <TextView
        android:id="@+id/videopager_inputzhuyan"
        android:layout_below="@id/videopager_title"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/videopager_zhuyan"
        android:layout_alignTop="@id/videopager_zhuyan"
        android:layout_marginLeft ="6dp"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        />
       <TextView
        android:id="@+id/videopager_daoyan"
        android:layout_below="@id/videopager_zhuyan"
         android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        android:text="@string/daoyan"
        />
      <TextView
        android:id="@+id/videopager_inputdaoyan"
        android:layout_below="@id/videopager_inputzhuyan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/videopager_daoyan"
         android:layout_alignTop="@id/videopager_daoyan"
        android:layout_marginLeft ="6dp"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        />
      <TextView
        android:id="@+id/videopager_nianfen"
        android:layout_below="@id/videopager_daoyan"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        android:text="@string/nianfen"
        />
      <TextView
        android:id="@+id/videopager_inputnianfen"
        android:layout_below="@id/videopager_inputdaoyan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/videopager_nianfen"
        android:layout_alignTop="@id/videopager_nianfen"
        android:layout_marginLeft ="6dp"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        />
      <TextView
        android:id="@+id/videopager_diqu"
        android:layout_below="@id/videopager_nianfen"
         android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        android:text="@string/diqu"
        />
      <TextView
        android:id="@+id/videopager_inputdiqu"
        android:layout_below="@id/videopager_inputnianfen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/videopager_diqu"
        android:layout_alignTop="@id/videopager_diqu"
        android:layout_marginLeft ="6dp"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        />
        <TextView
        android:id="@+id/videopager_yuyan"
        android:layout_below="@id/videopager_diqu"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        android:text="@string/yuyan"
        />
      <TextView
        android:id="@+id/videopager_inputyuyan"
        android:layout_below="@id/videopager_inputdiqu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/videopager_yuyan"
         android:layout_alignTop="@id/videopager_yuyan"
        android:layout_marginLeft ="6dp"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        />
      <TextView
        android:id="@+id/videopager_content"
        android:layout_below="@id/videopager_yuyan"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="3"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        android:text="@string/juqingjieshao"
        />
      <TextView
        android:id="@+id/videopager_inputcontent"
        android:layout_below="@id/videopager_inputyuyan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/videopager_content"
        android:layout_alignTop="@id/videopager_content"
        android:layout_marginLeft ="6dp"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="15"
        android:singleLine="false"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="normal" 
        />
      <ImageView 
        android:id="@+id/videopager_display"
        android:layout_below="@id/videopager_inputcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src= "@drawable/btn_play"
          
          />
</RelativeLayout>
</ScrollView>
</LinearLayout>